--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@ body {
     margin-top: 30px;
     background: $bg-gradient;
     color: #fff;
-    padding: 12px 24px;
+    padding: 14px 26px;
     border-radius: 50px;
     font-weight: 600;
     transition: 0.3s;
@@ -93,6 +93,7 @@ body {
 
   .hero-image {
     max-width: 100%;
+    margin-top: -77px;
     @media (max-width: 992px) {
       max-width: 180px;
       margin: 33px auto 50px;
@@ -102,7 +103,7 @@ body {
 
 // Platform Section
 .platform {
-  padding: 80px 0;
+  padding: 190px 0 80px;
   text-align: center;
 
   @media (max-width: 992px) {
@@ -111,13 +112,16 @@ body {
 
   h2 {
     font-weight: 800;
-    font-size: 32px;
+    font-size: 50px;
+    @media (max-width: 992px) {
+      font-size: 24px;
+    }
   }
 
   p {
-    max-width: 800px;
-    margin: 20px auto;
-    font-size: 18px;
+
+    margin: 37px auto 55px;
+    font-size: 24px;
     line-height: 1.25;
     @media (max-width: 992px) {
       font-size: 12px;
@@ -126,10 +130,11 @@ body {
   }
 
   img {
-    max-width: 360px;
+
     margin-top: 40px;
     @media (max-width: 992px) {
       margin-top: 0px;
+      max-width: 360px;
     }
   }
 }
@@ -137,7 +142,7 @@ body {
 /*2я СЕКЦИЯ*/
 .coverage {
   position: relative;
-  padding: 180px 0 30px;
+  padding: 232px 0 30px;
   background-color: #fff;
   text-align: center;
   @media (max-width: 992px) {
@@ -150,7 +155,7 @@ body {
 
   // Фоновая карта
   &__bg-none {
-    padding: 115px 0 0px!important;
+    padding: 163px 0 0px!important;
     background: #F7FBFF!important;
     &::before {
       background:transparent!important;
@@ -158,6 +163,9 @@ body {
     @media (max-width: 992px) {
       padding: 63px 0 0px!important;
     }
+    h2 {
+
+      margin-bottom: 93px!important;}
   }
   &::before {
     content: '';
@@ -201,6 +209,7 @@ body {
   }
 
   .info-card {
+    padding: 28px;
     height: 100%;
     background: #fff;
     border-radius: 16px;
@@ -210,13 +219,14 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(38, 38, 38, 0.1);
     @media (max-width: 992px) {
-      border-radius: 6px
+      border-radius: 6px;
+      padding: 10px;
     }
 
 
     h4 {
       font-weight: 700;
-      font-size: 20px;
+      font-size: 40px;
       @media (max-width: 992px) {
         font-size: 14px;
       }
@@ -264,7 +274,7 @@ body {
 }
 /*3я СЕКЦИЯ feature*/
 .features {
-  padding: 100px 0;
+  padding: 161px 0 100px;
   background-color: #fff;
   text-align: center;
   @media (max-width: 992px) {
@@ -272,13 +282,17 @@ body {
     background: linear-gradient(to bottom, #ffffff 0%, #eaf6ff 100%);
   }
   &__bg {
+    padding: 70px 0 120px!important;
     background: #F7FBFF!important;
+
+
     @media (max-width: 992px) { padding: 40px 0 35px!important; }
 
   }
   h2 {
     font-size: 50px;
     font-weight: 800;
+    margin-bottom: 5rem;
     @media (max-width: 992px) {
       font-weight: 800;
       font-size: 24px;
@@ -306,10 +320,12 @@ body {
     transition: 0.3s;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
     position: relative;
+    padding: 38px;
 
     @media (max-width: 992px) {
       border-radius: 6px;
       min-height: 192px;
+      padding: 10px;
 
     }
 
@@ -381,7 +397,7 @@ body {
     margin-top: 30px;
     background: $bg-gradient;
     color: #fff;
-    padding: 12px 24px;
+    padding: 14.5px 28px;
     border-radius: 50px;
     font-weight: 600;
     transition: 0.3s;
@@ -406,7 +422,7 @@ body {
 }
 /*4я СЕКЦИЯ white-label*/
 .white-label {
-  padding: 120px 0;
+  padding: 22px 0 100px;
   background: linear-gradient(180deg, #ffffff 0%, #d7f1ff 100%);
   text-align: center;
   @media (max-width: 992px) {
@@ -418,10 +434,12 @@ body {
   h2 {
     font-size: 50px;
     font-weight: 800;
+    margin-bottom: 90px;
     @media (max-width: 992px) {
       font-weight: 800;
       font-size: 24px;
       line-height: 100%;
+      margin-bottom: 54px;
     }
 
     .gradient-text {
@@ -458,7 +476,7 @@ body {
     }
 
     h5 {
-      margin-top: 20px;
+      margin-top: 40px;
       margin-bottom: 10px;
       font-weight: 600;
       font-size: 36px;
@@ -536,7 +554,7 @@ body {
 }
 .white-label__bg {
   overflow: hidden;
-  padding: 80px 0!important;
+  padding: 137px 0 0!important;
 
   background: #F7FBFF!important;
   z-index: -2;
@@ -565,6 +583,9 @@ body {
     transform: translate(29%, 5%);
     background: url("img/bg-white-label-2.png") center right no-repeat;
     background-size: contain;
+  }
+  .pt-7 {
+    padding-top: 7rem;
   }
 
 
@@ -595,7 +616,7 @@ body {
   .plan-card {
 
     border-radius: 15px;
-    padding: 32px;
+    padding: 28px 37px;
     text-align: left;
     height: 100%;
     display: flex;
@@ -730,9 +751,9 @@ body {
 
   .btn-blue {
     border: none;
-
+    min-width: 300px;
     color: #fff;
-    padding: 12px 28px;
+    padding: 16px 28px;
     border-radius: 50px;
     font-weight: 600;
     display: inline-block;
@@ -753,7 +774,7 @@ body {
 }
 /*6я СЕКЦИЯ roles*/
 .roles {
-  padding: 0px 0 100px;
+  padding: 0px 0 135px;
   background-color: #F7FBFF!important;
   text-align: center;
   @media (max-width: 992px) {
@@ -761,16 +782,17 @@ body {
   }
 
   h2 {
-    font-size: 32px;
+    font-size: 50px;
     font-weight: 800;
-    margin-bottom: 40px;
+    margin-bottom: 87px;
     @media (max-width: 992px) {
       font-size: 24px;
+      margin-bottom: 37px;
     }
   }
 
   .role-table-wrapper {
-    padding: 22px;
+    padding: 22px 22px 67px;
     background: transparent;
     border-radius: 21px;
     overflow: hidden;
@@ -1084,7 +1106,7 @@ body {
   .footer-logo {
     height: 45px;
     width: auto;
-    margin-bottom: 92px;
+    margin-bottom: 115px;
     @media (max-width: 992px) {
       margin: 0 auto 31px;
       height: 22px;
@@ -1116,11 +1138,11 @@ body {
 
   .btn-blue {
 
-    margin-top: 73px;
+    margin-top: 42px;
     display: inline-block;
     border:none;
     color: #fff;
-    padding: 12px 28px;
+    padding: 16px 42px;
     border-radius: 50px;
     font-weight: 600;
     transition: background 0.3s;
@@ -1141,7 +1163,7 @@ body {
   .footer-right {
     h5 {
       font-weight: 700;
-      font-size: 64px;
+      font-size: 40px;
       margin-bottom: 18px;
       margin-top: -20px;
       @media (max-width: 992px) {
@@ -1189,7 +1211,12 @@ body {
 
   }
 
-
+  .mt-9 {
+    margin-top: 9rem;
+    @media (max-width: 768px) {
+      margin-top: 1rem;
+    }
+  }
 }
 
 
