--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ body {
   .coverage .info-card {
     border-radius: 6px;
     padding: 10px;
+    min-height: 152px;
   }
 }
 .coverage .info-card h4 {
@@ -249,7 +250,7 @@ body {
   width: 56px;
   height: 56px;
   text-align: center;
-  background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+  background: linear-gradient(123deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
   padding: 8px;
   border-radius: 12px;
   display: inline-block;
@@ -318,6 +319,10 @@ body {
 }
 .features .feature-card.shadow-0 {
   box-shadow: none !important;
+}
+.features .info-img {
+  width: 84px;
+  height: 84px;
 }
 .features .feature-card {
   border: 1px solid rgba(38, 38, 38, 0.1);
@@ -521,15 +526,27 @@ body {
 }
 .white-label .wl-card .wl-icon-1 {
   background: linear-gradient(133deg, #ffb196 0%, #ff4424 66.92%), rgba(178, 126, 237, 0.15);
+  opacity: 0.8;
 }
 .white-label .wl-card .wl-icon-2 {
   background: linear-gradient(133deg, #faa2a6 0%, #ff495e 100%), rgba(145, 146, 255, 0.15);
+  opacity: 0.8;
 }
 .white-label .wl-card .wl-icon-3 {
   background: linear-gradient(133deg, #b2f5cb 0%, #14e361 65.08%), rgba(178, 126, 237, 0.15);
+  opacity: 0.8;
 }
 .white-label .wl-card .wl-icon-4 {
   background: linear-gradient(133deg, #d0e0ff 0%, #326aff 75.83%), rgba(145, 146, 255, 0.15);
+  opacity: 0.8;
+}
+.white-label .wl-card .wl-icon-5 {
+  background: linear-gradient(133deg, #ffb196 0%, #ff821c 66.92%), rgba(178, 126, 237, 0.15);
+  opacity: 0.8;
+}
+.white-label .wl-card .wl-icon-6 {
+  background: linear-gradient(133deg, #ffcedd 0%, #ff759e 66.92%), rgba(178, 126, 237, 0.15);
+  opacity: 0.8;
 }
 .white-label .wl-card .wl-icon img {
   width: 40px;
@@ -552,6 +569,11 @@ body {
   padding: 137px 0 0 !important;
   background: #F7FBFF !important;
   z-index: -2;
+}
+@media (max-width: 992px) {
+  .white-label__bg {
+    padding: 63px 0 0 !important;
+  }
 }
 .white-label__bg::before {
   content: "";
@@ -580,6 +602,11 @@ body {
 .white-label__bg .pt-7 {
   padding-top: 7rem;
 }
+@media (max-width: 992px) {
+  .white-label__bg .pt-7 {
+    padding-top: 33px;
+  }
+}
 
 /*5я СЕКЦИЯ plans*/
 .plans {
@@ -602,7 +629,6 @@ body {
 @media (max-width: 992px) {
   .plans h2 {
     font-size: 24px;
-    padding: 0 60px;
     margin-bottom: 0;
   }
 }
@@ -656,7 +682,6 @@ body {
 }
 .plans .plan-card .plan-label {
   font-size: 12px;
-  text-transform: uppercase;
   color: #8899bb;
   font-weight: 600;
 }
@@ -734,7 +759,6 @@ body {
 }
 .plans .btn-blue {
   border: none;
-  min-width: 300px;
   color: #fff;
   padding: 16px 28px;
   border-radius: 50px;
@@ -745,7 +769,7 @@ body {
   margin-top: 30px;
   background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .plans .btn-blue {
     margin: 30px auto 0;
   }
@@ -806,7 +830,7 @@ body {
   .roles .role-table thead th {
     font-size: 16px;
     padding: 20px 0px 15px;
-    width: 50%;
+    width: 58%;
   }
 }
 .roles .role-table tbody td {
@@ -920,7 +944,7 @@ body {
   line-height: 1;
 }
 .smart-interface .smart-card h5 .gradient-text {
-  background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+  background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -948,31 +972,108 @@ body {
   }
 }
 
+/*
+.tech-section {
+  background-color: #F7FBFF;
+
+
+  .tech-grid {
+    display: grid;
+    grid-template-columns: 0.6fr 1fr 1fr 0.6fr; // последняя карточка меньше
+    gap: 24px;
+    @media (max-width: 992px) {
+      gap: 12px;
+    }
+
+
+
+    .tech-row-bottom {
+      grid-column: 1 / -1;
+      display: grid;
+      gap: 24px;
+      grid-template-columns: 1fr 1fr 0.7fr; // последняя карточка меньше
+      @media (max-width: 992px) {
+        gap: 12px;
+      }
+    }
+  }
+
+  .tech-card {
+    backdrop-filter: blur(12px);
+    background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
+    border-radius: 23px;
+    padding: 20px 13px 50px;
+    text-align: center;
+    min-height: 160px;
+    @media (max-width: 992px) {
+      border-radius: 10px;
+      padding: 0px 13px 20px;
+      text-align: center;
+      min-height: 100px;
+    }
+
+
+    h5 {
+      font-weight: 600;
+      font-size: 35px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      @media (max-width: 992px) {
+        font-weight: 600;
+        font-size: 18px;
+      }
+
+      .gradient-text {
+        background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
+      }
+    }
+
+    p {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 1.3;
+      margin: 0;
+      @media (max-width: 992px) {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 120%;
+      }
+    }
+  }
+}*/
 .tech-section {
   background-color: #F7FBFF;
 }
-.tech-section .tech-grid {
-  display: grid;
-  grid-template-columns: 0.6fr 1fr 1fr 0.6fr;
-  gap: 24px;
-}
-@media (max-width: 992px) {
-  .tech-section .tech-grid {
-    gap: 12px;
+@media (max-width: 768px) {
+  .tech-section {
+    background: none;
   }
 }
-.tech-section .tech-grid .tech-row-bottom {
-  grid-column: 1/-1;
-  display: grid;
-  gap: 24px;
-  grid-template-columns: 1fr 1fr 0.7fr;
+.tech-section .container {
+  max-width: 1320px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
-@media (max-width: 992px) {
-  .tech-section .tech-grid .tech-row-bottom {
-    gap: 12px;
-  }
+.tech-section .container .tech-box:nth-child(1),
+.tech-section .container .tech-box:nth-child(4) {
+  flex: 0 0 calc(20% - 5px);
 }
-.tech-section .tech-card {
+.tech-section .container .tech-box:nth-child(2),
+.tech-section .container .tech-box:nth-child(3) {
+  flex: 0 0 calc(28% - 5px);
+}
+.tech-section .container .tech-box:nth-child(5),
+.tech-section .container .tech-box:nth-child(6),
+.tech-section .container .tech-box:nth-child(7) {
+  flex: 0 0 calc((100% - 40px) / 3);
+}
+.tech-section .container .tech-card {
   backdrop-filter: blur(12px);
   background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
   border-radius: 23px;
@@ -981,43 +1082,59 @@ body {
   min-height: 160px;
 }
 @media (max-width: 992px) {
-  .tech-section .tech-card {
+  .tech-section .container .tech-card {
     border-radius: 10px;
     padding: 0px 13px 20px;
     text-align: center;
     min-height: 100px;
   }
 }
-.tech-section .tech-card h5 {
+.tech-section .container .tech-card h5 {
   font-weight: 600;
   font-size: 35px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 @media (max-width: 992px) {
-  .tech-section .tech-card h5 {
+  .tech-section .container .tech-card h5 {
     font-weight: 600;
     font-size: 18px;
   }
 }
-.tech-section .tech-card h5 .gradient-text {
-  background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+.tech-section .container .tech-card h5 .gradient-text {
+  background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   color: transparent;
 }
-.tech-section .tech-card p {
+.tech-section .container .tech-card p {
   font-weight: 600;
   font-size: 15px;
   line-height: 1.3;
   margin: 0;
 }
 @media (max-width: 992px) {
-  .tech-section .tech-card p {
+  .tech-section .container .tech-card p {
     font-weight: 500;
     font-size: 10px;
     line-height: 120%;
+  }
+}
+
+.bg-footer-mob::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover !important;
+}
+@media (max-width: 768px) {
+  .bg-footer-mob::before {
+    background: url("img/bg-footer-2-mob.png") bottom left no-repeat;
   }
 }
 
@@ -1027,9 +1144,10 @@ body {
   padding: 177px 0 84px;
   font-family: "Manrope", sans-serif;
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .footer {
     padding: 46px 0 30px;
+    background: none;
   }
 }
 .footer::before {
@@ -1043,6 +1161,11 @@ body {
   background: url("img/bg-footer-1.png") bottom left no-repeat;
   background-size: contain;
 }
+@media (max-width: 768px) {
+  .footer::before {
+    background: none;
+  }
+}
 .footer::after {
   content: "";
   position: absolute;
@@ -1053,6 +1176,11 @@ body {
   z-index: -1;
   background: url("img/bg-footer-2.png") bottom right no-repeat;
   background-size: contain;
+}
+@media (max-width: 768px) {
+  .footer::after {
+    background: none;
+  }
 }
 .footer .footer-grid {
   display: flex;
@@ -1356,25 +1484,92 @@ body {
 
 .modal-close {
   position: absolute;
-  top: 16px;
-  right: 16px;
-  background: transparent;
+  width: 56px;
+  border-radius: 10px;
+  height: 56px;
+  top: 28px;
+  right: 28px;
   border: none;
-  font-size: 24px;
+  font-size: 0px;
   color: #888;
   cursor: pointer;
   transition: color 0.2s;
+  background: rgba(217, 217, 217, 0.15);
+}
+@media (max-width: 992px) {
+  .modal-close {
+    width: 36px;
+    height: 36px;
+    top: 16px;
+    right: 16px;
+  }
 }
 .modal-close:hover {
   color: #000;
+  background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+}
+.modal-close:hover svg path {
+  stroke: white;
 }
 
+/*
 @media (max-width: 1301px) {
-  .tech-section .tech-grid {
-    grid-template-columns: 1fr 1fr;
+  .tech-section{
+    .tech-grid {
+
+      grid-template-columns: 1fr 1fr; // последняя карточка меньше
+
+
+
+
+      .tech-row-bottom {
+
+        grid-template-columns: 1fr ; // последняя карточка меньше
+      }
+    }
   }
-  .tech-section .tech-grid .tech-row-bottom {
-    grid-template-columns: 1fr;
+
+}
+*/
+@media (max-width: 992px) {
+  .tech-section .container {
+    gap: 0px;
+  }
+  .tech-section .container .tech-box:nth-child(1) {
+    order: 2;
+    flex: 0 0 calc(50% - 5.5px);
+    margin-right: 5.5px;
+  }
+  .tech-section .container .tech-box:nth-child(2) {
+    order: 5;
+    flex: 0 0 calc(50% - 5.5px);
+    margin-right: 5.5px;
+  }
+  .tech-section .container .tech-box:nth-child(3) {
+    order: 6;
+    flex: 0 0 calc(50% - 5.5px);
+    margin-left: 5.5px;
+  }
+  .tech-section .container .tech-box:nth-child(4) {
+    order: 3;
+    flex: 0 0 calc(50% - 5.5px);
+    margin-left: 5.5px;
+  }
+  .tech-section .container .tech-box:nth-child(5) {
+    order: 4;
+    flex: 0 0 100%;
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+  .tech-section .container .tech-box:nth-child(6) {
+    order: 1;
+    flex: 0 0 100%;
+    margin-bottom: 16px;
+  }
+  .tech-section .container .tech-box:nth-child(7) {
+    order: 7;
+    flex: 0 0 100%;
+    margin-top: 16px;
   }
 }
 @media (max-width: 768px) {
