--- a/style.scss
+++ b/style.scss
@@ -221,6 +221,7 @@ body {
     @media (max-width: 992px) {
       border-radius: 6px;
       padding: 10px;
+      min-height: 152px;
     }
 
 
@@ -246,7 +247,7 @@ body {
       width: 56px;
       height: 56px;
       text-align: center;
-      background: $bg-gradient;
+      background: linear-gradient(123deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
       padding: 8px;
       border-radius: 12px;
       display: inline-block;
@@ -310,7 +311,10 @@ body {
   .feature-card.shadow-0 {
     box-shadow: none!important;
   }
-
+  .info-img {
+    width: 84px;
+    height: 84px;
+  }
   .feature-card {
     border: 1px solid rgba(38, 38, 38, 0.1);
     background: #fff;
@@ -520,21 +524,37 @@ body {
       background:
               linear-gradient(133deg, #ffb196 0%, #ff4424 66.92%),
               rgba(178, 126, 237, 0.15);
+      opacity: 0.8;
     }
     .wl-icon-2 {
       background:
               linear-gradient(133deg, #faa2a6 0%, #ff495e 100%),
               rgba(145, 146, 255, 0.15);
+      opacity: 0.8;
     }
     .wl-icon-3 {
       background:
               linear-gradient(133deg, #b2f5cb 0%, #14e361 65.08%),
               rgba(178, 126, 237, 0.15);
+      opacity: 0.8;
     }
     .wl-icon-4 {
       background:
               linear-gradient(133deg, #d0e0ff 0%, #326aff 75.83%),
               rgba(145, 146, 255, 0.15);
+      opacity: 0.8;
+    }
+    .wl-icon-5 {
+      background:
+              linear-gradient(133deg, #ffb196 0%, #ff821c 66.92%),
+              rgba(178, 126, 237, 0.15);
+      opacity: 0.8;
+    }
+    .wl-icon-6 {
+      background:
+              linear-gradient(133deg, #ffcedd 0%, #ff759e 66.92%),
+              rgba(178, 126, 237, 0.15);
+      opacity: 0.8;
     }
     .wl-icon img {
       width: 40px;
@@ -558,6 +578,9 @@ body {
 
   background: #F7FBFF!important;
   z-index: -2;
+  @media (max-width: 992px) {
+    padding: 63px 0 0!important;
+  }
 
   &::before {
     content: "";
@@ -586,6 +609,9 @@ body {
   }
   .pt-7 {
     padding-top: 7rem;
+    @media (max-width: 992px) {
+      padding-top: 33px;
+    }
   }
 
 
@@ -608,7 +634,7 @@ body {
     margin-bottom: 73px;
     @media (max-width: 992px) {
       font-size: 24px;
-      padding: 0 60px;
+
       margin-bottom: 0;
     }
   }
@@ -663,7 +689,7 @@ body {
 
     .plan-label {
       font-size: 12px;
-      text-transform: uppercase;
+
       color: #8899bb;
       font-weight: 600;
       @media (max-width: 992px) {
@@ -751,7 +777,7 @@ body {
 
   .btn-blue {
     border: none;
-    min-width: 300px;
+
     color: #fff;
     padding: 16px 28px;
     border-radius: 50px;
@@ -761,7 +787,7 @@ body {
     transition: background 0.3s;
     margin-top: 30px;
     background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
-    @media (max-width: 992px) {
+    @media (max-width: 768px) {
       margin: 30px auto 0;
     }
 
@@ -823,7 +849,7 @@ body {
         @media (max-width: 992px) {
           font-size: 16px;
           padding: 20px 0px 15px;
-          width: 50%;
+          width: 58%;
         }
 
       }
@@ -947,7 +973,7 @@ body {
       line-height: 1;
 
       .gradient-text {
-        background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+        background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -979,7 +1005,7 @@ body {
 }
 
 
-
+/*
 .tech-section {
   background-color: #F7FBFF;
 
@@ -1031,7 +1057,7 @@ body {
       }
 
       .gradient-text {
-        background: linear-gradient(90deg, #0043d3 0%, #459be2 51.92%, #b3e9ff 100%);
+        background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -1051,15 +1077,115 @@ body {
       }
     }
   }
+}*/
+
+
+.tech-section {
+  background-color: #F7FBFF;
+  @media (max-width: 768px) {
+
+    background:none;
+  }
+  .container {
+    max-width: 1320px;      // максимальная ширина контейнера
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;        // разрешаем перенос строк
+    gap: 20px;              // отступ между блоками
+
+
+
+    .tech-box:nth-child(1),
+    .tech-box:nth-child(4) {
+      flex: 0 0 calc(20% - 5px);  // фактически 20% минус доля gap
+    }
+    .tech-box:nth-child(2),
+    .tech-box:nth-child(3) {
+      flex: 0 0 calc(28% - 5px);  // 28% минус доля gap
+    }
+    .tech-box:nth-child(5),
+    .tech-box:nth-child(6),
+    .tech-box:nth-child(7) {
+      flex: 0 0 calc((100% - 40px) / 3); // три блока по 32% с учётом 2×20px gap
+    }
+
+
+
+
+
+    // Десктоп (≥992px): настраиваем ширины по спецификации
+    .tech-card {
+      backdrop-filter: blur(12px);
+      background: linear-gradient(117deg, rgba(38, 173, 254, 0.1) 0%, rgba(0, 91, 229, 0.1) 100%);
+      border-radius: 23px;
+      padding: 20px 13px 50px;
+      text-align: center;
+      min-height: 160px;
+      @media (max-width: 992px) {
+        border-radius: 10px;
+        padding: 0px 13px 20px;
+        text-align: center;
+        min-height: 100px;
+      }
+
+
+      h5 {
+        font-weight: 600;
+        font-size: 35px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        @media (max-width: 992px) {
+          font-weight: 600;
+          font-size: 18px;
+        }
+
+        .gradient-text {
+          background: linear-gradient(90deg, #0043d3 0%, #459be2 80.92%, #b3e9ff 109%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+        }
+      }
+
+      p {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 1.3;
+        margin: 0;
+        @media (max-width: 992px) {
+          font-weight: 500;
+          font-size: 10px;
+          line-height: 120%;
+        }
+      }
+    }
+  }
 }
 
+
+.bg-footer-mob::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover !important;
+
+  @media (max-width: 768px) {
+    background: url('img/bg-footer-2-mob.png') bottom left no-repeat;
+  }
+}
 .footer {
   z-index: 0;
   background: #F7FBFF;
   padding: 177px 0 84px;
   font-family: 'Manrope', sans-serif;
-  @media (max-width: 992px) {
+  @media (max-width: 768px) {
     padding:46px 0 30px;
+    background:none;
   }
 
   &::before {
@@ -1073,6 +1199,10 @@ body {
 
     background: url('img/bg-footer-1.png') bottom left no-repeat;
     background-size: contain;
+    @media (max-width: 768px) {
+      background:none;
+    }
+
   }
 
   &::after {
@@ -1086,6 +1216,10 @@ body {
 
     background: url("img/bg-footer-2.png") bottom right no-repeat;
     background-size: contain;
+    @media (max-width: 768px) {
+      background:none;
+    }
+
   }
 
   .footer-grid {
@@ -1391,23 +1525,36 @@ body {
 
 .modal-close {
   position: absolute;
-  top: 16px;
-  right: 16px;
-  background: transparent;
+  width: 56px;
+  border-radius: 10px;
+  height: 56px;
+  top: 28px;
+  right: 28px;
   border: none;
-  font-size: 24px;
+  font-size: 0px;
   color: #888;
   cursor: pointer;
   transition: color 0.2s;
+  background: rgba(217, 217, 217, 0.15);
+  @media (max-width: 992px) {
+    width: 36px;
+    height: 36px;
+    top: 16px;
+    right: 16px;
+  }
 
   &:hover {
     color: #000;
+    background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
+    svg path {
+      stroke: white;
+    }
   }
 }
 
 
 
-
+/*
 @media (max-width: 1301px) {
   .tech-section{
     .tech-grid {
@@ -1425,6 +1572,33 @@ body {
   }
 
 }
+*/
+
+@media (max-width: 992px) {
+  .tech-section {
+    .container {
+      gap: 0px;
+      .tech-box {
+        &:nth-child(1) { order: 2; flex: 0 0 calc(50% - 5.5px); margin-right: 5.5px; }
+        &:nth-child(2) { order: 5; flex: 0 0 calc(50% - 5.5px); margin-right: 5.5px;}
+        &:nth-child(3) { order: 6; flex: 0 0 calc(50% - 5.5px); margin-left: 5.5px;}
+        &:nth-child(4) { order: 3; flex: 0 0 calc(50% - 5.5px); margin-left: 5.5px;}
+        &:nth-child(5) { order: 4; flex: 0 0 100%; margin-top: 16px;  margin-bottom: 16px;}
+        &:nth-child(6) { order: 1; flex: 0 0 100%; margin-bottom: 16px;}
+        &:nth-child(7) { order: 7; flex: 0 0 100%; margin-top: 16px;}
+      }
+    }
+
+
+  }
+}
+
+
+
+
+
+
+
 
 @media (max-width: 768px) {
   .footer-grid {
@@ -1438,3 +1612,6 @@ body {
     align-items: center;
   }
 }
+
+
+
