--- a/style.css
+++ b/style.css
@@ -883,9 +883,10 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
+  background-size: cover !important;
   background: url("img/bg-smart-interface.png") center center no-repeat;
 }
-@media (max-width: 992px) {
+@media (max-width: 576px) {
   .smart-interface::before {
     background: url("img/bg-smart-interface-mob.png") center center no-repeat;
   }
