--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .main {
-  padding-top: 60px;
+  padding-top: 66px;
   background: url("img/bg.png") no-repeat top center;
   background-size: 100% auto;
 }
@@ -29,7 +29,7 @@ body {
 }
 
 .hero {
-  padding: 100px 0 60px;
+  padding: 133px 0 60px;
   text-align: left;
   position: relative;
 }
@@ -39,6 +39,7 @@ body {
   }
 }
 .hero h1 {
+  margin-top: 40px;
   font-weight: 800;
   font-size: 96px;
 }
@@ -50,10 +51,11 @@ body {
   }
 }
 .hero p {
-  font-size: 18px;
-  margin-top: 24px;
+  font-size: 24px;
+  margin-top: 20px;
   color: #333;
-  margin-bottom: 52px;
+  margin-bottom: 63px;
+  line-height: 125%;
 }
 @media (max-width: 992px) {
   .hero p {
@@ -67,7 +69,7 @@ body {
   margin-top: 30px;
   background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
   color: #fff;
-  padding: 14px 26px;
+  padding: 15px 29px;
   border-radius: 50px;
   font-weight: 600;
   transition: 0.3s;
@@ -99,7 +101,7 @@ body {
 }
 
 .platform {
-  padding: 190px 0 80px;
+  padding: 151px 208px 80px 0;
   text-align: center;
 }
 @media (max-width: 992px) {
@@ -117,7 +119,7 @@ body {
   }
 }
 .platform p {
-  margin: 37px auto 55px;
+  margin: 40px auto 55px;
   font-size: 24px;
   line-height: 1.25;
 }
@@ -172,20 +174,20 @@ body {
 .coverage::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 25px;
   left: 50%;
   max-width: 1000px;
   width: 100%;
   height: 100%;
   background: url("img/map-bg.png") no-repeat center top;
   background-size: contain;
-  transform: translateX(-50%);
+  transform: translateX(-61%);
   opacity: 0.15;
   pointer-events: none;
   z-index: 0;
 }
 .coverage h2 {
-  margin-bottom: 50px;
+  margin-bottom: 65px;
   position: relative;
   z-index: 1;
   font-weight: 800;
@@ -247,6 +249,7 @@ body {
   }
 }
 .coverage .info-card .icon {
+  margin-bottom: 28px !important;
   width: 56px;
   height: 56px;
   text-align: center;
@@ -279,7 +282,7 @@ body {
 
 /*3я СЕКЦИЯ feature*/
 .features {
-  padding: 161px 0 100px;
+  padding: 108px 0 100px;
   background-color: #fff;
   text-align: center;
 }
@@ -290,7 +293,7 @@ body {
   }
 }
 .features__bg {
-  padding: 70px 0 120px !important;
+  padding: 110px 0 120px !important;
   background: #F7FBFF !important;
 }
 @media (max-width: 992px) {
@@ -298,7 +301,11 @@ body {
     padding: 40px 0 35px !important;
   }
 }
+.features .mb54rem {
+  margin-bottom: 5.4rem !important;
+}
 .features h2 {
+  line-height: 1.08;
   font-size: 50px;
   font-weight: 800;
   margin-bottom: 5rem;
@@ -361,7 +368,7 @@ body {
 }
 .features .feature-card ul li {
   font-size: 16px;
-  margin-bottom: 8px;
+  margin-bottom: 0px;
   color: #858585;
   font-weight: 500;
   line-height: 150%;
@@ -399,10 +406,10 @@ body {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 }
 .features .btn-main {
-  margin-top: 30px;
+  margin-top: 13px;
   background: linear-gradient(117deg, #26adfe 0%, #005be5 100%);
   color: #fff;
-  padding: 14.5px 28px;
+  padding: 15.5px 37px;
   border-radius: 50px;
   font-weight: 600;
   transition: 0.3s;
@@ -482,8 +489,8 @@ body {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 }
 .white-label .wl-card h5 {
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-top: 42px;
+  margin-bottom: 15px;
   font-weight: 600;
   font-size: 36px;
   line-height: 111%;
@@ -564,9 +571,13 @@ body {
   height: auto;
 }
 
+.mb-21px {
+  margin-bottom: -21px !important;
+}
+
 .white-label__bg {
   overflow: hidden;
-  padding: 137px 0 0 !important;
+  padding: 151px 0 0 !important;
   background: #F7FBFF !important;
   z-index: -2;
 }
@@ -599,18 +610,19 @@ body {
   background: url("img/bg-white-label-2.png") center right no-repeat;
   background-size: contain;
 }
-.white-label__bg .pt-7 {
-  padding-top: 7rem;
+.white-label__bg .pt-6 {
+  padding-top: 6rem;
+  margin-bottom: 77px !important;
 }
 @media (max-width: 992px) {
-  .white-label__bg .pt-7 {
+  .white-label__bg .pt-6 {
     padding-top: 33px;
   }
 }
 
 /*5я СЕКЦИЯ plans*/
 .plans {
-  padding: 100px 0;
+  padding: 109px 0;
   background: url("img/bg-plans.png") no-repeat top center;
   background-size: 100% 100%;
   color: #fff;
@@ -621,10 +633,13 @@ body {
     padding: 43px 0 61px;
   }
 }
+.plans .mb-2r {
+  margin-bottom: 2rem;
+}
 .plans h2 {
   font-size: 48px;
   font-weight: 800;
-  margin-bottom: 73px;
+  margin-bottom: 82px;
 }
 @media (max-width: 992px) {
   .plans h2 {
@@ -656,7 +671,7 @@ body {
 }
 .plans .plan-card h4 {
   color: #ffffff;
-  margin-top: 8px;
+  margin-top: 30px;
   font-weight: 600;
   font-size: 36px;
   line-height: 86%;
@@ -669,7 +684,7 @@ body {
   }
 }
 .plans .plan-card h6 {
-  margin-top: 24px;
+  margin-top: 7px;
   color: #fff;
   font-weight: 600;
   font-size: 24px;
@@ -693,7 +708,7 @@ body {
 .plans .plan-card .plan-info {
   list-style: none;
   padding-left: 0;
-  margin: 20px 0;
+  margin: 13px 0 25px;
 }
 .plans .plan-card .plan-info li {
   font-size: 15px;
@@ -708,7 +723,7 @@ body {
 .plans .plan-card ul {
   list-style: disc;
   padding-left: 20px;
-  margin-bottom: 20px;
+  margin-bottom: -11px;
 }
 .plans .plan-card ul li {
   font-size: 15px;
@@ -729,7 +744,7 @@ body {
 }
 .plans .addon-card {
   border-radius: 15px;
-  padding: 32px;
+  padding: 21px;
   color: #d9e2f3;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
   text-align: left;
@@ -741,12 +756,12 @@ body {
   text-transform: uppercase;
   color: #8899bb;
   font-weight: 600;
-  margin-bottom: 4px;
+  margin-bottom: 31px;
 }
 .plans .addon-card h5 {
   font-weight: 700;
-  font-size: 18px;
-  margin-bottom: 8px;
+  font-size: 36px;
+  margin-bottom: 17px;
   color: #fff;
 }
 .plans .addon-card p {
@@ -756,6 +771,7 @@ body {
 .plans .addon-card .plan-foot {
   font-size: 13px;
   color: #8899bb;
+  margin-top: -8px !important;
 }
 .plans .btn-blue {
   border: none;
@@ -1094,7 +1110,7 @@ body {
   font-weight: 600;
   font-size: 35px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
 }
 @media (max-width: 992px) {
   .tech-section .container .tech-card h5 {
@@ -1142,7 +1158,7 @@ body {
 .footer {
   z-index: 0;
   background: #F7FBFF;
-  padding: 177px 0 84px;
+  padding: 182px 0 84px;
   font-family: "Manrope", sans-serif;
 }
 @media (max-width: 768px) {
@@ -1202,7 +1218,7 @@ body {
 .footer .footer-logo {
   height: 45px;
   width: auto;
-  margin-bottom: 115px;
+  margin-bottom: 125px;
 }
 @media (max-width: 992px) {
   .footer .footer-logo {
@@ -1215,7 +1231,7 @@ body {
   font-size: 96px;
   line-height: 71%;
   color: #262626;
-  margin-bottom: 50px;
+  margin-bottom: 41px;
 }
 @media (max-width: 992px) {
   .footer h3 {
@@ -1259,8 +1275,8 @@ body {
 .footer .footer-right h5 {
   font-weight: 700;
   font-size: 40px;
-  margin-bottom: 18px;
-  margin-top: -20px;
+  margin-bottom: 15px;
+  margin-top: -8px;
 }
 @media (max-width: 992px) {
   .footer .footer-right h5 {
@@ -1268,7 +1284,7 @@ body {
   }
 }
 .footer .footer-right p {
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   color: #333;
   font-weight: 400;
   font-size: 24px;
