--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
 }
 
 .platform {
-  padding: 151px 208px 80px 0;
+  padding: 151px 0 80px;
   text-align: center;
 }
 @media (max-width: 992px) {
@@ -708,10 +708,10 @@ body {
 .plans .plan-card .plan-info {
   list-style: none;
   padding-left: 0;
-  margin: 13px 0 25px;
+  margin: 20px 0 7px;
 }
 .plans .plan-card .plan-info li {
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1.6;
   color: #c0cae9;
 }
@@ -723,10 +723,10 @@ body {
 .plans .plan-card ul {
   list-style: disc;
   padding-left: 20px;
-  margin-bottom: -11px;
+  margin-bottom: 18px;
 }
 .plans .plan-card ul li {
-  font-size: 15px;
+  font-size: 14px;
   color: #d5e0f0;
   margin-bottom: 6px;
 }
@@ -1322,7 +1322,7 @@ body {
   }
 }
 .footer .mt-9 {
-  margin-top: 9rem;
+  margin-top: 8.5rem;
 }
 @media (max-width: 768px) {
   .footer .mt-9 {
