--- a/style.scss
+++ b/style.scss
@@ -785,7 +785,10 @@ body {
     .plan-foot {
       font-size: 13px;
       color: #8899bb;
-      margin-top: -8px !important
+      margin-top: -8px !important;
+      @media (max-width: 992px) {
+        margin-top: 16px !important
+      }
     }
   }
 
