--- a/style.css
+++ b/style.css
@@ -14,17 +14,22 @@ body {
   width: auto;
   display: block;
 }
+@media (max-width: 992px) {
+  .logo img {
+    height: 22px;
+  }
+}
 
 .main {
   padding-top: 66px;
   background: url("img/bg.png") no-repeat top center;
   background-size: 100% auto;
 }
-@media (max-width: 375px) {
+@media (max-width: 576px) {
   .main {
     background: url("img/bg-mob.png") no-repeat top center;
     background-size: cover;
-    padding-top: 25px;
+    padding-top: 77px;
   }
 }
 
@@ -35,7 +40,7 @@ body {
 }
 @media (max-width: 992px) {
   .hero {
-    padding-top: 78px;
+    padding-top: 41px;
   }
 }
 .hero h1 {
@@ -59,9 +64,10 @@ body {
 }
 @media (max-width: 992px) {
   .hero p {
-    padding-top: 16px;
+    padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+    font-size: 16px;
   }
 }
 .hero .btn-main {
@@ -77,7 +83,7 @@ body {
 @media (max-width: 992px) {
   .hero .btn-main {
     position: absolute;
-    bottom: 0;
+    bottom: 27px;
     left: 50%;
     transform: translateX(-50%);
     font-weight: 700;
@@ -106,7 +112,7 @@ body {
 }
 @media (max-width: 992px) {
   .platform {
-    padding: 70px 0 50px;
+    padding: 48px 0 50px;
   }
 }
 .platform h2 {
