--- a/style.scss
+++ b/style.scss
@@ -644,7 +644,10 @@ body {
     padding: 43px 0 61px;
   }
   .mb-2r {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem!important;
+    @media (max-width: 992px) {
+      margin-bottom: 1rem;
+    }
   }
   h2 {
     font-size: 48px;
